[ux] fix spacing issues caused my markdown

--- a/public/styl/components/base.styl
+++ b/public/styl/components/base.styl
@@ -68,6 +68,18 @@ a:not(.button)
     color: darken($blue, 30%)
     transition: color .5s ease
 
+blockquote
+  white-space: pre
+  padding: 20px
+  margin: 30px 0 30px 15px
+  color: $gray-dark
+  font-style: italic
+  border-left: 2px solid $gray-lighter
+  background: lighten($gray-lighter, 80%)
+
+  p
+    margin: 0
+
 .cf
   &:before,
   &:after
