--- a/public/styl/components/code.styl
+++ b/public/styl/components/code.styl
@@ -8,6 +8,7 @@ pre
   padding: 20px
   margin-bottom: 30px
   border-radius: 3px
+  white-space: nowrap
   font: $font-size/1.5 $font-monospaced
   color: $gray-dark
   background: lighten($gray-lighter, 90%)
