--- a/public/styl/components/shared.styl
+++ b/public/styl/components/shared.styl
@@ -6,7 +6,6 @@
 
 blockquote,
 code
-  white-space: nowrap
   word-wrap: break-word
   word-break: break-all
   overflow: auto
