--- a/public/styl/sections/posts.styl
+++ b/public/styl/sections/posts.styl
@@ -25,6 +25,9 @@
     h3:empty
       display: none
 
+    ul li p
+      margin: 0 0 5px 0
+
   .byline
     margin: 15px 0 30px 0
 
